--- a/client/styles.css
+++ b/client/styles.css
@@ -1,11 +1,18 @@
 body {
   padding: 0;
-  margin: 0;
+  margin: 0.375rem 0.375rem 0;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 0.375rem);
 }
 
 nav {
   display: flex;
   justify-content: space-between;
+}
+
+#usr {
+  text-align: end;
 }
 
 textarea {
@@ -17,18 +24,36 @@ textarea {
   justify-content: center;
   align-items: start;
   flex-wrap: wrap;
-  min-height: 80px;
+  min-height: 5rem;
 }
 
 #content {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-around;
-  height: calc(100vh - 120px);
+  margin-top: 1.25rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  overflow: hidden;
+  flex-grow: 1;
+}
+
+@media only screen and (max-device-width: 480px) {
+  #content {
+    grid-template-columns: 1fr;
+    height: unset;
+    overflow: visible;
+  }
+
+  #jobs {
+    min-height: unset;
+  }
+
+  .column:has(#btns) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
 }
 
 #btns {
-  margin-top: 20px;
+  margin-top: 1.25rem;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -44,11 +69,11 @@ textarea {
 
 .memo {
   display: block;
-  font-size: 14px;
-  margin-left: 10px;
+  font-size: 0.875rem;
+  margin-left: 0.625rem;
 }
 
 button {
-  padding: 10px 20px;
-  margin: 5px;
+  padding: 0.625rem 1.25rem;
+  margin: 0.313rem;
 }
